Update:理財主管線上取消預約主管信、遠距預約列表行員登入按鈕無法送出。

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -534,10 +534,10 @@
     </tr>
 </script>
 
-<script id="uid-template-perPage" type="text/html">
+<script id="uid-Consulttemplate-perPage" type="text/html">
     <span>每頁顯示</span>
     <!-- [data-sizebox="true"]: 載入後自動綁定分頁筆數客製樣式下拉功能 -->
-    <select id="uid-view-perPage" name="per_page" data-perpage="true" class="o-selectbox o-selectbox--pagesize">
+    <select id="uid-Consultview-perPage" name="per_page" data-perpage="true" class="o-selectbox o-selectbox--pagesize">
         <% for(var i = 0; i < values.length - 1; i++ ) { %>
         <option value="<%= values[i] %>"><%= values[i] %>筆</option>
         <% } %>
@@ -545,7 +545,7 @@
     </select>
 </script>
 
-<script id="uid-template-pagination" type="text/html">
+<script id="uid-Consulttemplate-pagination" type="text/html">
     <div class="o-pagination">
         <% if (currentPage > 1) { %>
         <a href="javascript:;" data-page="prev" class="o-pagination__prev"></a>
@@ -635,12 +635,12 @@
             pagination: {
                 //headerView: '#uid-filter-header',
                 container: '#uid-pagination-0',
-                paginationView: '#uid-template-pagination',
+                paginationView: '#uid-Consulttemplate-pagination',
                 visiblePages: 5,
                 perPage: {
                     values: [10, 50, 100, data0.length],
                     container: '#uid-perPage-0',
-                    perPageView: '#uid-template-perPage'
+                    perPageView: '#uid-Consulttemplate-perPage'
                 },
                 onPagination: function () {
                 }
@@ -716,12 +716,12 @@
             pagination: {
                 //headerView: '#uid-filter-header',
                 container: '#uid-pagination-1',
-                paginationView: '#uid-template-pagination',
+                paginationView: '#uid-Consulttemplate-pagination',
                 visiblePages: 5,
                 perPage: {
                     values: [10, 50, 100, data1.length],
                     container: '#uid-perPage-1',
-                    perPageView: '#uid-template-perPage'
+                    perPageView: '#uid-Consulttemplate-perPage'
                 },
                 onPagination: function () {
                 }
@@ -799,12 +799,12 @@
             pagination: {
                 //headerView: '#uid-filter-header',
                 container: '#uid-pagination-2',
-                paginationView: '#uid-template-pagination',
+                paginationView: '#uid-Consulttemplate-pagination',
                 visiblePages: 5,
                 perPage: {
                     values: [10, 50, 100, data2.length],
                     container: '#uid-perPage-2',
-                    perPageView: '#uid-template-perPage'
+                    perPageView: '#uid-Consulttemplate-perPage'
                 },
                 onPagination: function () {
                 }
@@ -867,7 +867,7 @@
         attachPaginationEvents('#uid-pagination-1', fnScrollUp);
         attachPaginationEvents('#uid-pagination-2', fnScrollUp);
 
-        $(document).on('change.pagesize', '#uid-view-perPage', function () {
+        $(document).on('change.pagesize', '#uid-Consultview-perPage', function () {
             fnToFirstPage();
          }).sizebox();
 
