--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -553,7 +553,7 @@
                                                                 <!-- data-start-date: 請填寫基金成立日期 -->
                                                                 <!-- data-start-date: 若無限制日期，請移除此Attribute -->
                                                                 <!-- data-end-date: 若無限制日期，請移除此Attribute -->
-                                                                <input type="text" class="o-calendarBox__input" data-trend-filter="inputStart" data-calendar="true" data-start-date="@BasicData.EstablishmentDate.CheckNullOrEmptyString()" data-end-date="0d" readonly>
+                                                                <input type="text" class="o-calendarBox__input" data-trend-filter="inputStart" data-calendar="true" data-end-date="0d" readonly>
                                                             </div>
                                                         </div>
                                                         <div class="l-form__error">
@@ -569,7 +569,7 @@
                                                                 <!-- data-start-date: 請填寫基金成立日期 -->
                                                                 <!-- data-start-date: 若無限制日期，請移除此Attribute -->
                                                                 <!-- data-end-date: 若無限制日期，請移除此Attribute -->
-                                                                <input type="text" class="o-calendarBox__input" data-trend-filter="inputEnd" data-calendar="true" data-start-date="@BasicData.EstablishmentDate.CheckNullOrEmptyString()" data-end-date="0d" readonly>
+                                                                <input type="text" class="o-calendarBox__input" data-trend-filter="inputEnd" data-calendar="true" data-end-date="0d" readonly>
                                                             </div>
                                                         </div>
                                                         <div class="l-form__error">
